# Autonomous_sys_2025_G4

./: .gitignore  README.md
src/controller_pkg/: CMakeLists.txt
src/controller_pkg/launch/: controller_pkg.launch
src/controller_pkg/params/: controller_pkg.yaml
src/controller_pkg/src/: controller_node.cpp  nav_to_cave_entrance.cpp  nav_to_cave_entrance_node.cpp  takeoff_node.cpp
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: FrontierGoalMsg.msg
src/custom_msgs/srv/: CheckPath.srv
src/detection_pkg/: CMakeLists.txt  package.xml
src/fla_msgs/: CMakeLists.txt
src/frontier_detector/: CMakeLists.txt  package.xml
src/frontier_detector/launch/: frontier_detector.launch  path_plan.launch
src/frontier_detector/msg/: FrontierGoalMsg.msg
src/frontier_detector/params/: frontier_detector.yaml
src/frontier_detector/python/: path_test.py
src/frontier_detector/src/: frontier_detection.cpp  frontier_navigator.cpp  path_builder.cpp  traj_gen.cpp
src/move_pkg/: CMakeLists.txt  package.xml
src/move_pkg/src/: lantern_detector.cpp  move_straight.cpp  test.cpp
src/perception_pkg/: CMakeLists.txt  README.md  package.xml
src/perception_pkg/launch/: perception.launch
src/rrt_planner/: CMakeLists.txt  package.xml
src/rrt_planner/launch/: rrt_planner.launch
src/rrt_planner/params/: rrt_planner.yaml
src/rrt_planner/src/: rrt_planner_node.cpp
src/simulation/cfg/: config.rviz  new_config.rviz
src/simulation/launch/: all.launch  combined.launch  simulation.launch
src/system/: CMakeLists.txt  package.xml
src/system/fla_msgs/: package.xml
src/system/launch/: state_machine.launch  state_machine_test.launch
src/system/src/: state_machine_node.cpp
src/trajectory_pkg/: CMakeLists.txt  package.xml
src/trajectory_pkg/launch/: trajectory_pkg.launch
src/trajectory_pkg/params/: trajectory_pkg.yaml
src/trajectory_pkg/src/: traj_gen.cpp
