<package format="2">
  <name>system</name>
  <version>0.1.0</version>
  <description>The system package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>fla_msgs</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>mav_state_machine_msgs</build_depend>
  <exec_depend>mav_state_machine_msgs</exec_depend>
  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>fla_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>

  <export></export>
</package>

